# equipment-guardian

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/agents/: __init__.py
backend/app/alerts/: service.py
backend/app/api/: alerts.py  analytics.py  assets.py  copilot.py  health.py  ml_predictions.py  predictions.py  router.py
backend/app/config/: settings.py
backend/app/domain/: __init__.py  assets.py
backend/app/health/: calculator.py  engine.py  models.py  rules.py
backend/app/history/: analytics_service.py  event_history.py  telemetry_history.py  timeline_service.py
backend/app/intelligence/: equipment_guardian_agent.py
backend/app/intelligence/tools/: analytics_tool.py  asset_tool.py  health_tool.py  prediction_tool.py  timeline_tool.py
backend/app/ml/: dataset_builder.py  training_service.py
backend/app/models/: __init__.py  model_loader.py  prediction_service.py
backend/app/prediction/: engine.py  events.py  models.py  predictor.py  recommendations.py
backend/app/prediction/ml/: asset_event.py  dataset_builder.py  evaluation_service.py  feature_builder.py  model_loader.py  prediction_service.py  training_service.py
backend/app/repositories/: __init__.py  mock_asset_repository.py
backend/app/services/: prediction_engines.py
backend/app/storage/: analytics_service.py  telemetry_history.py  timeline_service.py
backend/ml/haul_truck/evaluation/: tire-risk-v1.metrics.json
backend/tests/: README.md
(+52 files in other folders)
