[project]
name = "equipment-guardian-backend"
version = "0.1.0"
description = "FastAPI backend for Equipment Guardian."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

